{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "WorldControls",
            "id": "0af8ce33-2806-461b-8a16-aeea7e67fd0c",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "6e98871f-45b9-401f-93bd-06e417b63ef4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fc5cb269-90a8-4391-a2d6-30942c5accc1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Consume",
                    "type": "Button",
                    "id": "5fc8d81e-f150-438a-a901-a3947f2cc25b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pick Up Object",
                    "type": "Button",
                    "id": "5d83323c-6a6a-495c-b484-6a4be7105eac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scorpion's Tail",
                    "type": "Button",
                    "id": "eb8dd400-1f90-4725-9a66-0559198893ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5a0a71a5-d4a6-44c8-9136-bfc5c3fc52dc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "63c49308-5b0d-45dc-bdb5-80d2d9efc4fa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1412f696-6b9b-469a-a24a-28a079a8f354",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f52c16a9-1b4a-45d1-af2b-0139624bdea9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8759be0e-7a34-43eb-a81a-a87535067af4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Consume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81897daa-33cf-45a8-8620-f931a4f053dd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pick Up Object",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f5250f1-6f68-4c4e-a2fc-33cf75f0bbd6",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scorpion's Tail",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CasinoControls",
            "id": "8d8a7f04-d13d-4a71-870b-3d9aaa1cc8da",
            "actions": [
                {
                    "name": "Select Card",
                    "type": "Button",
                    "id": "d4d12673-f761-4413-9a0c-f697e52334ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll Dice",
                    "type": "Button",
                    "id": "2a1d09ce-b6d7-4022-bad1-f9729943250f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spin Slots",
                    "type": "Button",
                    "id": "20717e97-d7fb-4b30-bf12-4c5c6b266ddd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3eb76c4a-20eb-4f49-b3a0-6de52cae32b6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select Card",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9cc9b8a-f3a5-4c21-ad28-eab3400ab47a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll Dice",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dec53df-b9c6-417f-8b90-8b32904dfbd5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spin Slots",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIControls",
            "id": "666886a9-2733-4105-86cc-bee9691748f6",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "77d1ac18-0964-4260-8911-f0c7a73017bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "88a9d104-3580-443c-b087-b5cda77d9175",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}